GNOME Bugzilla – Bug 657661
Fix anti-aliasing for the bottom-right corner
Last modified: 2011-08-30 15:05:22 UTC
The bottom-right corner was quirky: it had a gap in the top and the square under it kept on being repainted. These patches fix this problem.
Created attachment 195148 [details] [review] MetaWindowActor: Corner paths needs to be made in clockwise order
Created attachment 195149 [details] [review] frames: Fix the visible region when we have a rounded bottom-right corner
Review of attachment 195148 [details] [review]: Looks fine
Review of attachment 195149 [details] [review]: Seems to make sense
Attachment 195148 [details] pushed as 622583a - MetaWindowActor: Corner paths needs to be made in clockwise order Attachment 195149 [details] pushed as 0b4cc14 - frames: Fix the visible region when we have a rounded bottom-right corner