MetaWindowActor: Corner paths needs to be made in clockwise order

https://bugzilla.gnome.org/show_bug.cgi?id=657661